<resources>
    <string name="app_name">Rooted Minds</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rooted_minds">Rooted Minds</string>
    <string name="about_us">About Us</string>
    <string name="about_rooted_minds">About Rooted Minds</string>
    <string name="about_desc">Welcome to Rooted Minds, a simple mobile application with a series of nature-based activities to help users uncover unconventional ways to cope with mental wellness.\n\nContact Us:\nInstagram: @rooted__minds</string>
    <string name="mission_and_vision">Mission and Vision</string>
    <string name="moto_desc">Our Motto:\nMake the unconventional, conventional!\n\nWith that, Rooted Minds want to raise self-awareness, knowledge, and self-initiative in improving the mental wellbeing, as well as aspire anyone to be advocates of mental wellness so that the it can be the new norm in today\'s society.</string>
    <string name="about_the_functions">About the Functions</string>
    <string name="function_desc">Nature therapy, sometimes referred to as ecotherapy, describes a broad group of techniques or treatments with the intention of improving an individual\'s mental or physical health, specifically with an individual\'s presence within nature.\n\nOur team believes that Nature Therapy would bring a sustainable method of improving mental wellness. In addition, Nature Therapy provides a way for the user to connect to nature and unwind from the fast-paced environment of Singapore.</string>
    <string name="proceed">Proceed</string>
    <string name="indemnity_agreement">Indemnity Agreement</string>
    <string name="accept_terms">I ACCEPT AND\nACKNOWLEDGE THIS\nAGREEMENT</string>
    <string name="home">Home</string>
    <string name="my_progress">My Progress</string>
    <string name="reflection">Reflection</string>
    <string name="our_partners">Our Partners</string>
    <string name="helplines">Helplines</string>
    <string name="references">References</string>
    <string name="featured">Featured</string>
    <string name="category">Categories</string>
    <string name="individual_activities">Individual Activities</string>
    <string name="group_activities">Group Activities</string>
    <string name="inc_positive_activities">Increase Positive Feelings Activities</string>
    <string name="inc_stress_relief_activities">Relief Stress Activities</string>
    <string name="inc_improve_memory_activities">Improve Memory Activities</string>
    <string name="start_now">Start Now</string>
    <string name="current_activity">Current Activity</string>
    <string name="minutes">minutes</string>
    <string name="activity_tracking_in_progress">Activity Tracking\nIn Progress…</string>
    <string name="activity_tracking_paused">Activity Tracking\nPaused…</string>
    <string name="awesome_completion">Awesome Completion!</string>
    <string name="back_to_activities">BACK TO ACTIVITIES</string>
    <string name="most_tracked_activity">MOST TRACKED\nACTIVITY</string>
    <string name="achievements">Achievements</string>
    <string name="month">Month</string>
    <string name="awards_progression">Awards Progression</string>
    <string name="activities_tracked">ACTIVITIES\nTRACKED</string>
    <string name="add_reflection">Add Reflection</string>
    <string name="excursion_log">Excursion Log</string>
    <string name="title">Title:</string>
    <string name="title_here">Title here</string>
    <string name="location">Location:</string>
    <string name="location_here">Location here</string>
    <string name="notes_on_the_overall_scenery">Notes on the overall scenery:</string>
    <string name="type_your_thoughts_here">Type your thoughts here..</string>
    <string name="an_initial_observation">An initial observation:</string>
    <string name="an_observation_that_revealed_itself_to_me_gradually">An observation that revealed itself to me gradually:</string>
    <string name="a_particularly_memorable_detail">A particularly memorable detail:</string>
    <string name="changes_i_noticed_in_my_body_during_the_walk">Changes I noticed in my body during the walk:</string>
    <string name="lingering_sensations_or_emotions">Lingering sensations or emotions:</string>
    <string name="add">Add</string>
</resources>